--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Unipump",
-  "name": "Unipump",
+  "short_name": "Unifund",
+  "name": "Unifund",
   "icons": [
     {
       "src": "./images/192x192_App_Icon.png",
